remove more duplicated strings

--- a/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
@@ -138,7 +138,7 @@
                 android:layout_toStartOf="@+id/chat_popup_image_button"
                 android:background="@color/colorPrimaryMediumDark"
                 android:gravity="start|center_vertical"
-                android:hint="@string/your_chat_name"
+                android:hint="@string/chat_give_name"
                 android:imeOptions="flagNoExtractUi"
                 android:maxLines="1"
                 android:padding="@dimen/margin_20"
