--- a/SportsSideKick/app/src/main/res/layout-large/popup_edit_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_edit_chat.xml
@@ -68,7 +68,7 @@
                 android:layout_toStartOf="@+id/edit_top_vertical_spliter"
                 android:background="?chatSlideButtonBackgroundColorRef"
                 android:gravity="center"
-                android:text="@string/edit_chat"
+                android:text="@string/edit"
                 android:textColor="?chatSlideButtonTextColorRef" />
 
             <TextView
