--- a/SportsSideKick/app/src/main/res/layout-large/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_join_chat.xml
@@ -124,7 +124,7 @@
                 android:layout_toStartOf="@+id/chat_join_search_button"
                 android:background="@color/colorPrimaryMediumDark"
                 android:gravity="start|center_vertical"
-                android:hint="@string/search_public_chats"
+                android:hint="@string/public_chats_search"
                 android:imeOptions="flagNoExtractUi"
                 android:maxLines="1"
                 android:padding="@dimen/margin_20"
@@ -182,7 +182,7 @@
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
                 android:padding="@dimen/padding_8"
-                android:text="@string/public_chats_your_friends_are_in"
+                android:text="@string/friend_chats"
                 android:textColor="?chatJoinChatsHeadlineColorRef" />
 
             <RelativeLayout
