--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
@@ -26,7 +26,7 @@
             android:layout_centerInParent="true"
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
-            android:text="@string/your_friends_title"
+            android:text="@string/friends_title"
             android:textColor="?colorAccent"
             android:textSize="@dimen/font_size_18" />
 
@@ -143,7 +143,7 @@
                 android:layout_marginStart="@dimen/margin_10"
                 android:layout_toEndOf="@id/search_icon"
                 android:background="?searchFieldBackgroundRef"
-                android:hint="@string/your_friends_search_hint"
+                android:hint="@string/friends_search"
                 android:imeOptions="flagNoExtractUi"
                 android:inputType="text"
                 android:maxLines="1"
@@ -201,7 +201,7 @@
                 android:layout_marginStart="@dimen/margin_10"
                 android:layout_toEndOf="@id/requests_number"
                 android:gravity="center_vertical"
-                android:text="@string/your_friends_request"
+                android:text="@string/friend_requests"
                 android:textColor="?colorAccent"
                 android:textSize="@dimen/font_size_20"
                 android:textStyle="normal" />
