--- a/SportsSideKick/app/src/main/res/layout/popup_add_friend.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_add_friend.xml
@@ -135,7 +135,7 @@
             android:layout_marginStart="@dimen/margin_10"
             android:layout_toStartOf="@+id/search_icon"
             android:background="@null"
-            android:hint="@string/your_friends_search_hint"
+            android:hint="@string/friends_search"
             android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
