--- a/SportsSideKick/app/src/main/res/layout/row_add_friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_add_friend_item.xml
@@ -53,7 +53,7 @@
             android:id="@+id/friend_request_pending"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/request_pending"
+            android:text="@string/friend_request_pending"
             android:lines="1"
             android:visibility="gone"
             android:layout_marginEnd="@dimen/margin_14"
