--- a/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
@@ -178,7 +178,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/contact_info_phone"
                 android:layout_marginTop="@dimen/margin_10"
-                android:text="@string/member_since"
+                android:text="@string/subscribed_since"
                 android:textColor="?colorAccent" />
 
             <TextView
