--- a/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
@@ -107,7 +107,7 @@
             android:layout_weight="1"
             android:background="?popupSelectedCaptionBackgroundColorRef"
             android:gravity="center"
-            android:text="@string/request"
+            android:text="@string/requests"
             android:textColor="?popupSelectedCaptionTextColorRef" />
     </LinearLayout>
 
