--- a/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
@@ -67,7 +67,7 @@
         android:layout_below="@+id/top_buttons_container"
         android:gravity="center"
         android:background="?colorPrimarySemiLight"
-        android:text="@string/friends_you_follow"
+        android:text="@string/following"
         android:textColor="@color/white" />
 
     <com.wang.avi.AVLoadingIndicatorView
@@ -90,7 +90,7 @@
             android:id="@+id/no_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/no_friends"
+            android:text="@string/no_results"
             android:visibility="gone"
             android:layout_centerInParent="true"
             android:textColor="?white_semitransparent"/>
