--- a/SportsSideKick/app/src/main/res/layout-large/popup_edit_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_edit_chat.xml
@@ -130,7 +130,7 @@
                 android:layout_toEndOf="@id/chat_image_view"
                 android:background="?chatJoinSearchBackgroundColorRef"
                 android:gravity="start|center_vertical"
-                android:hint="@string/group_chat_name"
+                android:hint="@string/chat_give_name"
                 android:imeOptions="flagNoExtractUi"
                 android:maxLines="1"
                 android:padding="@dimen/margin_20"
@@ -183,7 +183,7 @@
                 android:drawablePadding="@dimen/padding_8"
                 android:drawableStart="@drawable/popup_search_icon"
                 android:gravity="center_vertical"
-                android:hint="@string/search_for_member"
+                android:hint="@string/friends_search"
                 android:imeOptions="flagNoExtractUi|actionSearch"
                 android:inputType="text"
                 android:lines="1"
