--- a/SportsSideKick/app/src/main/res/layout-large/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_join_chat.xml
@@ -71,7 +71,7 @@
                 android:layout_toStartOf="@+id/top_vertical_spliter"
                 android:background="?chatSlideSecondButtonBackgroundColorRef"
                 android:gravity="center"
-                android:text="@string/create_chat"
+                android:text="@string/chat_create"
                 android:textColor="?chatSlideSecondButtonTextColorRef" />
 
             <TextView
