--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -224,8 +224,9 @@
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
-                android:text="@string/create"
+                android:text="@string/chat_create"
                 android:textColor="@color/white" />
+
             <TextView
                 android:id="@+id/chat_menu_edit"
                 android:layout_width="match_parent"
@@ -266,7 +267,7 @@
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
-                android:text="@string/search"
+                android:text="@string/chats_search"
                 android:textColor="@color/white" />
             <TextView
                 android:id="@+id/chat_menu_alerts"
