--- a/SportsSideKick/app/src/main/res/layout/popup_edit_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_edit_chat.xml
@@ -121,7 +121,7 @@
         android:layout_below="@+id/edit_top_vertical_spliter"
         android:background="@color/colorPrimaryMediumDark"
         android:gravity="start|center_vertical"
-        android:hint="@string/group_chat_name"
+        android:hint="@string/chat_give_name"
         android:imeOptions="flagNoExtractUi"
         android:maxLines="1"
         android:layout_toEndOf="@id/chat_image_view"
@@ -170,7 +170,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/textview_dark_round"
             android:gravity="center_vertical"
-            android:hint="@string/search_for_member"
+            android:hint="@string/friends_search"
             android:imeOptions="flagNoExtractUi|actionSearch"
             android:inputType="text"
             android:lines="1"
