--- a/SportsSideKick/app/src/main/res/layout/row_chat_public.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_chat_public.xml
@@ -18,7 +18,7 @@
         android:layout_alignParentEnd="true"
         android:padding="@dimen/padding_8"
         android:layout_marginEnd="@dimen/margin_8"
-        android:text="@string/join_official_chat"
+        android:text="@string/join_chat"
         android:textColor="?colorAccent"
         android:textSize="@dimen/font_size_12"/>
 
