--- a/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
@@ -248,7 +248,7 @@
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
-                android:text="@string/chats_search"
+                android:text="@string/chats_public_search"
                 android:textColor="?chatDetailsColorRef" />
             <TextView
                 android:id="@+id/chat_menu_alerts"
