do not allow clicks over login prompt in the chat

--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -386,6 +386,8 @@
         android:id="@+id/inactive_container"
         android:layout_width="match_parent"
         android:visibility="visible"
+        android:clickable="true"
+        android:focusable="false"
         android:layout_height="match_parent">
 
         <ImageView
