--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -174,6 +174,7 @@
 
                     <TextView
                         android:id="@+id/textView2"
+                        android:lineSpacingMultiplier="0.8"
                         style="@style/fontTitilliumWebLight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
