--- a/SportsSideKick/app/src/main/res/layout/fragment_friend.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friend.xml
@@ -12,7 +12,8 @@
         android:id="@+id/caption"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="24dp"
+        tools:layout_marginTop="0dp"
         android:background="@drawable/phone_background"
         android:gravity="center"
         android:orientation="horizontal"
@@ -20,6 +21,7 @@
         android:textAlignment="center"
         android:textColor="?popupsCaptionColor"
         android:tileMode="repeat"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
