--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -179,7 +179,7 @@
                 android:imeActionId="@+id/action_send_message_id"
                 android:imeActionLabel="Send"
                 android:imeOptions="actionSend"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:maxLines="1"
                 android:paddingBottom="@dimen/padding_13"
                 android:paddingEnd="@dimen/padding_8"
@@ -385,8 +385,8 @@
     <RelativeLayout
         android:id="@+id/inactive_container"
         android:layout_width="match_parent"
-        android:visibility="visible"
         android:clickable="true"
+        tools:layout_height="0dp"
         android:focusable="false"
         android:layout_height="match_parent">
 
@@ -519,5 +519,6 @@
         android:id="@+id/translation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:layout_height="0dp"
         android:visibility="gone"/>
 </RelativeLayout>
