--- a/SportsSideKick/app/src/main/res/layout-large/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_login_sing_up.xml
@@ -148,7 +148,7 @@
             android:textSize="@dimen/font_size_16" />
 
         <ImageButton
-            android:id="@+id/close_dialog_button"
+            android:id="@+id/backButton"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentStart="true"
