--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
@@ -31,7 +31,7 @@
             android:textSize="@dimen/font_size_18" />
 
         <ImageButton
-            android:id="@+id/close_dialog_button"
+            android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
