--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -2,11 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="24dp"
-    android:background="@color/colorGrayMediumLight">
+    android:background="@color/colorGrayMediumLight"
+    android:clickable="true"
+    android:paddingTop="24dp">
 
     <RelativeLayout
         android:id="@+id/top_buttons_container"
@@ -27,7 +27,7 @@
             android:textSize="@dimen/font_size_18" />
 
         <ImageButton
-            android:id="@+id/close_dialog_button"
+            android:id="@+id/backButton"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentStart="true"
@@ -52,34 +52,34 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/content_image"
+        android:id="@+id/contentImage"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_150"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:alpha="0.5"
-        android:src="@drawable/image_rumours_background"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/top_buttons_container"/>
+        android:layout_below="@+id/top_buttons_container"
+        android:adjustViewBounds="true"
+        android:alpha="0.5"
+        android:scaleType="centerCrop"
+        tools:src="@drawable/image_rumours_background" />
 
     <TextView
-        android:id="@+id/remove"
+        android:id="@+id/removeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/contentImage"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/content_image"
         android:padding="@dimen/padding_10"
-        android:visibility="gone"
-        android:text="@string/delete" />
+        android:text="@string/delete"
+        android:visibility="gone" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/author_user_image"
+        android:id="@+id/authorImage"
         android:layout_width="@dimen/width_26"
         android:layout_height="@dimen/height_26"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/content_image"
-        android:layout_marginTop="@dimen/margin_10"
+        android:layout_below="@id/contentImage"
         android:layout_marginStart="@dimen/margin_15"
+        android:layout_marginTop="@dimen/margin_10"
         android:src="?profileImageIcon"
         android:visibility="visible" />
 
@@ -87,22 +87,22 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:foregroundGravity="center"
-        android:layout_alignTop="@+id/content_image"
-        android:layout_alignBottom="@+id/content_image">
+        android:layout_alignBottom="@+id/contentImage"
+        android:layout_alignTop="@+id/contentImage"
+        android:foregroundGravity="center">
 
         <ImageView
-            android:id="@+id/camera"
+            android:id="@+id/cameraButton"
             android:layout_width="@dimen/width_60"
             android:layout_height="@dimen/width_60"
             android:background="@drawable/black_circle"
             android:src="@drawable/camera_button"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/progressBar" />
+            app:layout_constraintEnd_toStartOf="@+id/progressBar"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/gallery"
+            android:id="@+id/galleryButton"
             android:layout_width="@dimen/width_60"
             android:layout_height="@dimen/width_60"
             android:background="@drawable/black_circle"
@@ -129,31 +129,31 @@
     </android.support.constraint.ConstraintLayout>
 
     <TextView
-        android:id="@+id/author_name"
+        android:id="@+id/authorName"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@id/content_image"
-        android:layout_alignTop="@+id/author_user_image"
-        android:layout_alignBottom="@+id/author_user_image"
+        android:layout_alignBottom="@+id/authorImage"
+        android:layout_alignTop="@+id/authorImage"
+        android:layout_below="@id/contentImage"
         android:layout_marginStart="@dimen/margin_5"
-        android:gravity="center_vertical"
-        android:layout_toEndOf="@+id/author_user_image"
+        android:layout_toEndOf="@+id/authorImage"
         android:ellipsize="end"
-        tools:text="Chris Reeves"
+        android:gravity="center_vertical"
         android:textColor="@color/colorGray"
-        android:textSize="@dimen/font_size_12" />
+        android:textSize="@dimen/font_size_12"
+        tools:text="Chris Reeves" />
 
     <EditText
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textCapSentences"
-        android:layout_below="@id/author_user_image"
+        android:layout_below="@id/authorImage"
         android:layout_marginEnd="@dimen/margin_5"
         android:layout_marginStart="@dimen/margin_15"
         android:layout_marginTop="@dimen/margin_5"
         android:background="@null"
         android:hint="@string/post_title_hint"
+        android:inputType="textCapSentences"
         android:textColor="@color/colorPrimaryVeryLight"
         android:textColorHint="@color/colorPrimaryVeryLight"
         android:textSize="@dimen/font_size_18"
@@ -164,16 +164,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/caption"
-        android:inputType="textCapSentences"
         android:layout_marginBottom="@dimen/margin_5"
         android:layout_marginEnd="@dimen/margin_15"
         android:layout_marginStart="@dimen/margin_15"
         android:layout_marginTop="@dimen/margin_5"
         android:animateLayoutChanges="true"
         android:background="@null"
-        android:textSize="@dimen/font_size_16"
         android:hint="@string/post_body_hint"
+        android:inputType="textCapSentences"
+        android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:textColor="@color/black" />
+        android:textSize="@dimen/font_size_16" />
 
 </RelativeLayout>
