--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -25,7 +25,7 @@
             android:textSize="@dimen/font_size_11" />
 
         <ImageView
-            android:id="@+id/content_image"
+            android:id="@+id/contentImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
