--- a/SportsSideKick/app/src/main/res/layout/popup_language.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_language.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/close_dialog_button"
+                android:id="@+id/backButton"
                 android:layout_width="@dimen/standard_button_height"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_alignParentStart="true"
