--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
@@ -54,7 +54,7 @@
 
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/author_user_image"
+            android:id="@+id/authorImage"
             android:layout_width="@dimen/width_20"
             android:layout_height="@dimen/height_20"
             android:layout_alignParentStart="true"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="@dimen/padding_10"
-            android:layout_toEndOf="@+id/author_user_image"
+            android:layout_toEndOf="@+id/authorImage"
             android:gravity="center">
 
             <android.support.v7.widget.AppCompatImageView
